# BeagleBoneBlack-QuadCopter

./: .gitignore  .travis.yml  CMakeLists.txt  MakeFile  Makefile  Quadro.cpp  Quadro.h  README.md  main.cpp  quadroCopter.cpp  quadroCopter.h  travis.yml
Lib/Analog/: AnalogDevice.cpp  AnalogDevice.h
Lib/Exceptions/: ExceptionAid.cpp  ExceptionAid.h
Lib/LSM303/: LSM303DLHC.cpp
Lib/LSM303/Accelerometer/: LSM303Accelerometer.cpp  LSM303Accelerometer.h
Lib/LSM303/Magnetometer/: LSM303Magnetometer.cpp  LSM303Magnetometer.h
Lib/LVMaxSonarEZ/: LVMaxSonarEZ.cpp  LVMaxSonarEZ.h
Lib/Motors/: Motors.cpp  Motors.h
Lib/Motors/DJI_2212/: DJI_2212.cpp  DJI_2212.h
Lib/Overlays/: iDeviceOverlay.cpp  iDeviceOverlay.h
Lib/Overlays/Analog/: AnalogOverlay.cpp  AnalogOverlay.h
Lib/Overlays/PWM/: PWMOverlay.cpp  PWMOverlay.h  PinOverlay.cpp  PinOverlay.h
Lib/PWM/: PWMDevice.cpp  PWMDevice.h
include/: BBBAnalogDevice.h  BBBConfiguration.h  BBBI2CDevice.h  BBBL3GD20H.h  BBBLSM303DLHC.h  BBBPWMDevice.h  Quadro.h
lib/Timer/: Timer.cpp
lib/aeronautics/: aeronautics.cpp  aeronautics.h
lib/analog/: analogBase.cpp  analogBase.h
lib/analog/devices/LVMaxSonarEZ/: LVMaxSonarEZ.cpp  LVMaxSonarEZ.h
lib/analog/exceptions/: analogRuntimeException.h  analogSetupException.h
lib/analog/overlays/: analogOverlay.cpp  analogOverlay.h
lib/docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp.js  _i_device_8h.html  _i_device_8h_source.html  _kalman_8h.html  _kalman_8h_source.html  _l3_g_d20_h_8cpp.html  _l3_g_d20_h_8h.html  _l3_g_d20_h_8h.js  _l3_g_d20_h_8h_source.html  _l_s_m303_accelerometer_8cpp.html  _l_s_m303_accelerometer_8h.html  _l_s_m303_accelerometer_8h.js  _l_s_m303_accelerometer_8h_source.html  _l_s_m303_d_l_h_c_8cpp.html  _l_s_m303_d_l_h_c_8h.html  _l_s_m303_d_l_h_c_8h.js  _l_s_m303_d_l_h_c_8h_source.html  _l_s_m303_magnetometer_8cpp.html  _l_s_m303_magnetometer_8h.html  _l_s_m303_magnetometer_8h.js  _l_s_m303_magnetometer_8h_source.html  _l_v_max_sonar_e_z_8cpp.html  _l_v_max_sonar_e_z_8h.html  _l_v_max_sonar_e_z_8h.js  _l_v_max_sonar_e_z_8h_source.html  _p_i_d_8cpp.html  _p_i_d_8cpp.js  _p_i_d_8h.html  _p_i_d_8h_source.html  _r_e_a_d_m_e_8md.html  _timer_8cpp.html  _timer_8h.html  _timer_8h_source.html  analog_base_8cpp.html  analog_base_8h.html  analog_base_8h_source.html  analog_overlay_8cpp.html  (+398 more)
lib/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+93 more)
lib/exceptions/: fatalException.h  runtimeException.h  setupException.h
lib/i2c/: i2cDevice.cpp  i2cDevice.h
lib/i2c/exceptions/: i2cRuntimeException.h  i2cSetupException.h
lib/interfaces/: IDevice.h
lib/orientation/: orientation.cpp  orientation.h
lib/overlays/: overlayBase.cpp  overlayBase.h  pinOverlay.cpp  pinOverlay.h
lib/overlays/exceptions/: overlaySetupException.h
lib/pwm/: pwmDevice.cpp  pwmDevice.h
lib/pwm/exceptions/: pwmSetupException.h
lib/pwm/motors/: motors.cpp  motors.h
lib/pwm/overlays/: pwmOverlay.cpp  pwmOverlay.h
lib/scripts/: readMotors.sh  readSensors.sh  stopMotors.sh
(+10 files in other folders)
